--- a/os/fs/fat/testsuite/Makefile.am
+++ b/os/fs/fat/testsuite/Makefile.am
@@ -26,7 +26,11 @@ noinst_DATA = 2hd.img fat16_5MB.img fat32.img
 
 CLEANFILES = 2hd.img fat16_5MB.img fat32.img
 
+if APPLE
+LDADD += -lpthread
+else
 LDADD += -lpthread -lrt
+endif
 
 endif POSIX
 
