--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -1,4 +1,8 @@
+if APPLE
+LDADD = ../os/fs/fat/libesfat.a ../os/kernel/libeskernel.a ../os/libes++/libessup++.a
+else
 LDADD = ../os/fs/fat/libesfat.a ../os/kernel/libeskernel.a ../os/libes++/libessup++.a -lrt
+endif
 
 bin_PROGRAMS = trunc bm vformat vcopy vlist guidgen vget vdel
 
