--- a/tools/Makefile.in
+++ b/tools/Makefile.in
@@ -30,13 +30,16 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
+build_triplet = @build@
+host_triplet = @host@
+target_triplet = @target@
 bin_PROGRAMS = trunc$(EXEEXT) bm$(EXEEXT) vformat$(EXEEXT) \
 	vcopy$(EXEEXT) vlist$(EXEEXT) guidgen$(EXEEXT) vget$(EXEEXT) \
 	vdel$(EXEEXT)
 subdir = .
 DIST_COMMON = $(am__configure_deps) $(srcdir)/Makefile.am \
-	$(srcdir)/Makefile.in $(top_srcdir)/configure depcomp \
-	install-sh missing
+	$(srcdir)/Makefile.in $(top_srcdir)/configure config.guess \
+	config.sub depcomp install-sh missing
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
@@ -51,43 +54,75 @@ PROGRAMS = $(bin_PROGRAMS)
 am_bm_OBJECTS = bm.$(OBJEXT)
 bm_OBJECTS = $(am_bm_OBJECTS)
 bm_LDADD = $(LDADD)
-bm_DEPENDENCIES = ../os/fs/fat/libesfat.a ../os/kernel/libeskernel.a \
-	../os/libes++/libessup++.a
+@APPLE_FALSE@bm_DEPENDENCIES = ../os/fs/fat/libesfat.a \
+@APPLE_FALSE@	../os/kernel/libeskernel.a \
+@APPLE_FALSE@	../os/libes++/libessup++.a
+@APPLE_TRUE@bm_DEPENDENCIES = ../os/fs/fat/libesfat.a \
+@APPLE_TRUE@	../os/kernel/libeskernel.a \
+@APPLE_TRUE@	../os/libes++/libessup++.a
 am_guidgen_OBJECTS = guidgen.$(OBJEXT)
 guidgen_OBJECTS = $(am_guidgen_OBJECTS)
 guidgen_LDADD = $(LDADD)
-guidgen_DEPENDENCIES = ../os/fs/fat/libesfat.a \
-	../os/kernel/libeskernel.a ../os/libes++/libessup++.a
+@APPLE_FALSE@guidgen_DEPENDENCIES = ../os/fs/fat/libesfat.a \
+@APPLE_FALSE@	../os/kernel/libeskernel.a \
+@APPLE_FALSE@	../os/libes++/libessup++.a
+@APPLE_TRUE@guidgen_DEPENDENCIES = ../os/fs/fat/libesfat.a \
+@APPLE_TRUE@	../os/kernel/libeskernel.a \
+@APPLE_TRUE@	../os/libes++/libessup++.a
 am_trunc_OBJECTS = trunc.$(OBJEXT)
 trunc_OBJECTS = $(am_trunc_OBJECTS)
 trunc_LDADD = $(LDADD)
-trunc_DEPENDENCIES = ../os/fs/fat/libesfat.a \
-	../os/kernel/libeskernel.a ../os/libes++/libessup++.a
+@APPLE_FALSE@trunc_DEPENDENCIES = ../os/fs/fat/libesfat.a \
+@APPLE_FALSE@	../os/kernel/libeskernel.a \
+@APPLE_FALSE@	../os/libes++/libessup++.a
+@APPLE_TRUE@trunc_DEPENDENCIES = ../os/fs/fat/libesfat.a \
+@APPLE_TRUE@	../os/kernel/libeskernel.a \
+@APPLE_TRUE@	../os/libes++/libessup++.a
 am_vcopy_OBJECTS = vcopy.$(OBJEXT)
 vcopy_OBJECTS = $(am_vcopy_OBJECTS)
 vcopy_LDADD = $(LDADD)
-vcopy_DEPENDENCIES = ../os/fs/fat/libesfat.a \
-	../os/kernel/libeskernel.a ../os/libes++/libessup++.a
+@APPLE_FALSE@vcopy_DEPENDENCIES = ../os/fs/fat/libesfat.a \
+@APPLE_FALSE@	../os/kernel/libeskernel.a \
+@APPLE_FALSE@	../os/libes++/libessup++.a
+@APPLE_TRUE@vcopy_DEPENDENCIES = ../os/fs/fat/libesfat.a \
+@APPLE_TRUE@	../os/kernel/libeskernel.a \
+@APPLE_TRUE@	../os/libes++/libessup++.a
 am_vdel_OBJECTS = vdel.$(OBJEXT)
 vdel_OBJECTS = $(am_vdel_OBJECTS)
 vdel_LDADD = $(LDADD)
-vdel_DEPENDENCIES = ../os/fs/fat/libesfat.a ../os/kernel/libeskernel.a \
-	../os/libes++/libessup++.a
+@APPLE_FALSE@vdel_DEPENDENCIES = ../os/fs/fat/libesfat.a \
+@APPLE_FALSE@	../os/kernel/libeskernel.a \
+@APPLE_FALSE@	../os/libes++/libessup++.a
+@APPLE_TRUE@vdel_DEPENDENCIES = ../os/fs/fat/libesfat.a \
+@APPLE_TRUE@	../os/kernel/libeskernel.a \
+@APPLE_TRUE@	../os/libes++/libessup++.a
 am_vformat_OBJECTS = vformat.$(OBJEXT)
 vformat_OBJECTS = $(am_vformat_OBJECTS)
 vformat_LDADD = $(LDADD)
-vformat_DEPENDENCIES = ../os/fs/fat/libesfat.a \
-	../os/kernel/libeskernel.a ../os/libes++/libessup++.a
+@APPLE_FALSE@vformat_DEPENDENCIES = ../os/fs/fat/libesfat.a \
+@APPLE_FALSE@	../os/kernel/libeskernel.a \
+@APPLE_FALSE@	../os/libes++/libessup++.a
+@APPLE_TRUE@vformat_DEPENDENCIES = ../os/fs/fat/libesfat.a \
+@APPLE_TRUE@	../os/kernel/libeskernel.a \
+@APPLE_TRUE@	../os/libes++/libessup++.a
 am_vget_OBJECTS = vget.$(OBJEXT)
 vget_OBJECTS = $(am_vget_OBJECTS)
 vget_LDADD = $(LDADD)
-vget_DEPENDENCIES = ../os/fs/fat/libesfat.a ../os/kernel/libeskernel.a \
-	../os/libes++/libessup++.a
+@APPLE_FALSE@vget_DEPENDENCIES = ../os/fs/fat/libesfat.a \
+@APPLE_FALSE@	../os/kernel/libeskernel.a \
+@APPLE_FALSE@	../os/libes++/libessup++.a
+@APPLE_TRUE@vget_DEPENDENCIES = ../os/fs/fat/libesfat.a \
+@APPLE_TRUE@	../os/kernel/libeskernel.a \
+@APPLE_TRUE@	../os/libes++/libessup++.a
 am_vlist_OBJECTS = vlist.$(OBJEXT)
 vlist_OBJECTS = $(am_vlist_OBJECTS)
 vlist_LDADD = $(LDADD)
-vlist_DEPENDENCIES = ../os/fs/fat/libesfat.a \
-	../os/kernel/libeskernel.a ../os/libes++/libessup++.a
+@APPLE_FALSE@vlist_DEPENDENCIES = ../os/fs/fat/libesfat.a \
+@APPLE_FALSE@	../os/kernel/libeskernel.a \
+@APPLE_FALSE@	../os/libes++/libessup++.a
+@APPLE_TRUE@vlist_DEPENDENCIES = ../os/fs/fat/libesfat.a \
+@APPLE_TRUE@	../os/kernel/libeskernel.a \
+@APPLE_TRUE@	../os/libes++/libessup++.a
 DEFAULT_INCLUDES = -I.@am__isrc@
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -174,14 +209,22 @@ am__quote = @am__quote@
 am__tar = @am__tar@
 am__untar = @am__untar@
 bindir = @bindir@
+build = @build@
 build_alias = @build_alias@
+build_cpu = @build_cpu@
+build_os = @build_os@
+build_vendor = @build_vendor@
 builddir = @builddir@
 datadir = @datadir@
 datarootdir = @datarootdir@
 docdir = @docdir@
 dvidir = @dvidir@
 exec_prefix = @exec_prefix@
+host = @host@
 host_alias = @host_alias@
+host_cpu = @host_cpu@
+host_os = @host_os@
+host_vendor = @host_vendor@
 htmldir = @htmldir@
 includedir = @includedir@
 infodir = @infodir@
@@ -201,10 +244,15 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
 sysconfdir = @sysconfdir@
+target = @target@
 target_alias = @target_alias@
+target_cpu = @target_cpu@
+target_os = @target_os@
+target_vendor = @target_vendor@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-LDADD = ../os/fs/fat/libesfat.a ../os/kernel/libeskernel.a ../os/libes++/libessup++.a -lrt
+@APPLE_FALSE@LDADD = ../os/fs/fat/libesfat.a ../os/kernel/libeskernel.a ../os/libes++/libessup++.a -lrt
+@APPLE_TRUE@LDADD = ../os/fs/fat/libesfat.a ../os/kernel/libeskernel.a ../os/libes++/libessup++.a
 trunc_SOURCES = trunc.c
 bm_SOURCES = bm.c
 vformat_SOURCES = vformat.cpp vdisk.h
